[package]
name = "mlua-userdata-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
mlua = { version = "0.9", features = ["macros"] }

[lib]
proc-macro = true

[dev-dependencies]
expect-test = "1.5.0"
mlua = "0.9"
