[package]
name = "mlua-userdata-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
mlua = { version = "0.9", features = ["macros"] }

[lib]
proc-macro = true

[dev-dependencies]
expect-test = "1.5.0"
mlua = "0.9"

[features]
mlua__async = ["mlua/async"]
mlua__lua51 = ["mlua/lua51"]
mlua__lua52 = ["mlua/lua52"]
mlua__lua53 = ["mlua/lua53"]
mlua__lua54 = ["mlua/lua54"]
mlua__luajit52 = ["mlua/luajit52"]
mlua__luajit = ["mlua/luajit"]
mlua__luau-jit = ["mlua/luau-jit"]
mlua__luau = ["mlua/luau"]
mlua__luau-vector4 = ["mlua/luau-vector4"]
mlua__macros = ["mlua/macros"]
mlua__module = ["mlua/module"]
mlua__parking_lot = ["mlua/parking_lot"]
mlua__send = ["mlua/send"]
# mlua__serialize = ["mlua/serialize"]
mlua__unstable = ["mlua/unstable"]
mlua__vendored = ["mlua/vendored"]
proc-macro2__nightly = ["proc-macro2/nightly"]
proc-macro2__proc-macro = ["proc-macro2/proc-macro"]
proc-macro2__span-locations = ["proc-macro2/span-locations"]
quote__proc-macro = ["quote/proc-macro"]
syn__clone-impls = ["syn/clone-impls"]
syn__derive = ["syn/derive"]
syn__extra-traits = ["syn/extra-traits"]
syn__fold = ["syn/fold"]
syn__full = ["syn/full"]
syn__parsing = ["syn/parsing"]
syn__printing = ["syn/printing"]
syn__proc-macro = ["syn/proc-macro"]
syn__test = ["syn/test"]
syn__visit-mut = ["syn/visit-mut"]
syn__visit = ["syn/visit"]
